Added some html files

--- a/campaign/creatures/animals/img/index.html
+++ b/campaign/creatures/animals/img/index.html
@@ -86,6 +86,21 @@
      </a>
     </li>
     <li>
+     <a href="Telomney_Falcons (1).jpg">
+      Telomney Falcons (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Telomney_Falcons (2).jpg">
+      Telomney Falcons (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="Telomney_Falcons (3).jpg">
+      Telomney Falcons (3).jpg
+     </a>
+    </li>
+    <li>
      <a href="mossback_treant (1).jpg">
       mossback treant (1).jpg
      </a>
