--- a/campaign/creatures/insects/img/index.html
+++ b/campaign/creatures/insects/img/index.html
@@ -70,6 +70,26 @@
       Potana The Web Spinner.jpg
      </a>
     </li>
+    <li>
+     <a href="purple_leopard_dart_frog (1).jpg">
+      purple leopard dart frog (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="purple_leopard_dart_frog (2).jpg">
+      purple leopard dart frog (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="purple_leopard_dart_frog (3).jpg">
+      purple leopard dart frog (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="purple_leopard_dart_frog (4).jpg">
+      purple leopard dart frog (4).jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
