--- a/campaign/creatures/insects/index.html
+++ b/campaign/creatures/insects/index.html
@@ -66,6 +66,11 @@
      </a>
     </li>
     <li>
+     <a href="purple_leopard_dart_frog.html">
+      purple leopard dart frog
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Arcane_Flutterers.jpg">
       <i class="fas fa-camera">
       </i>
@@ -91,6 +96,34 @@
       <i class="fas fa-camera">
       </i>
       img/Potana_The_Web_Spinner.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/purple_leopard_dart_frog (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/purple_leopard_dart_frog (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/purple_leopard_dart_frog (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/purple_leopard_dart_frog (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/purple_leopard_dart_frog (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/purple_leopard_dart_frog (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/purple_leopard_dart_frog (4).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/purple_leopard_dart_frog (4).jpg
      </a>
     </li>
    </ul>
