--- a/campaign/creatures/monsters/img/index.html
+++ b/campaign/creatures/monsters/img/index.html
@@ -111,23 +111,33 @@
      </a>
     </li>
     <li>
-     <a href="Umbradraconis_Brastryx (1).jpg">
-      Umbradraconis Brastryx (1).jpg
-     </a>
-    </li>
-    <li>
-     <a href="Umbradraconis_Brastryx (2).jpg">
-      Umbradraconis Brastryx (2).jpg
-     </a>
-    </li>
-    <li>
-     <a href="Umbradraconis_Brastryx (3).jpg">
-      Umbradraconis Brastryx (3).jpg
-     </a>
-    </li>
-    <li>
      <a href="stoneshaper_golem.jpg">
       stoneshaper golem.jpg
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx (1).jpg">
+      umbradraconis brastryx (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx (2).jpg">
+      umbradraconis brastryx (2).jpg
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx (3).jpg">
+      umbradraconis brastryx (3).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whiskered_crocfish (1).jpg">
+      whiskered crocfish (1).jpg
+     </a>
+    </li>
+    <li>
+     <a href="whiskered_crocfish (2).jpg">
+      whiskered crocfish (2).jpg
      </a>
     </li>
    </ul>
