--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -71,8 +71,23 @@
      </a>
     </li>
     <li>
+     <a href="Umbradraconis_Brastryx.mp3">
+      Umbradraconis Brastryx.mp3
+     </a>
+    </li>
+    <li>
+     <a href="Whiskered_crocfish.html">
+      Whiskered crocfish
+     </a>
+    </li>
+    <li>
      <a href="stoneshaper_golem.html">
       stoneshaper golem
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx,_the_forgotten_titan.html">
+      umbradraconis brastryx, the forgotten titan
      </a>
     </li>
     <li>
@@ -160,31 +175,45 @@
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Umbradraconis_Brastryx (1).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Umbradraconis_Brastryx (1).jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Umbradraconis_Brastryx (2).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Umbradraconis_Brastryx (2).jpg
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/Umbradraconis_Brastryx (3).jpg">
-      <i class="fas fa-camera">
-      </i>
-      img/Umbradraconis_Brastryx (3).jpg
-     </a>
-    </li>
-    <li>
      <a class="image-index-link" href="img/stoneshaper_golem.jpg">
       <i class="fas fa-camera">
       </i>
       img/stoneshaper_golem.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/umbradraconis_brastryx (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/umbradraconis_brastryx (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/umbradraconis_brastryx (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/umbradraconis_brastryx (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/umbradraconis_brastryx (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/umbradraconis_brastryx (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whiskered_crocfish (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/whiskered_crocfish (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/whiskered_crocfish (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/whiskered_crocfish (2).jpg
      </a>
     </li>
    </ul>
