--- a/campaign/encounters/The_Emporium_of_Goro.html
+++ b/campaign/encounters/The_Emporium_of_Goro.html
@@ -98,8 +98,8 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/goro_pin_pad.png">
-       <img alt="Image" src="img/goro_pin_pad.png"/>
+      <a href="img/goro_emporium-greeting.png">
+       <img alt="Image" src="img/goro_emporium-greeting.png"/>
       </a>
      </div>
      <div class="dnd-image-source">
