--- a/campaign/encounters/img/index.html
+++ b/campaign/encounters/img/index.html
@@ -71,6 +71,11 @@
      </a>
     </li>
     <li>
+     <a href="goro_emporium-greeting.png">
+      goro emporium-greeting.png
+     </a>
+    </li>
+    <li>
      <a href="goro_pin_pad.png">
       goro pin pad.png
      </a>
