--- a/campaign/encounters/index.html
+++ b/campaign/encounters/index.html
@@ -89,6 +89,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/goro_emporium-greeting.png">
+      <i class="fas fa-camera">
+      </i>
+      img/goro_emporium-greeting.png
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/goro_pin_pad.png">
       <i class="fas fa-camera">
       </i>
