--- a/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
+++ b/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
@@ -54,26 +54,26 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    Reno's Illusory Arena: A Perilous Game of Survival
+    Ryna's Illusory Arena: A Perilous Game of Survival
    </h3>
    <p class="first-paragraph">
-    In the current age, a powerful and enigmatic wizard known as Reno the Relicoligist has unveiled the hidden
+    In the current age, a powerful and enigmatic wizard known as Ryna the Relicoligist has unveiled the hidden
     <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera
     </a>
-    to the world, transforming it into a treacherous arena (The Zaubergrube Arena) where survival is the ultimate prize. This mystical haven, once a sanctuary from evil, now serves as the backdrop for an otherworldly game orchestrated by Reno for the entertainment of the elite.
+    to the world, transforming it into a treacherous arena (The Zaubergrube Arena) where survival is the ultimate prize. This mystical haven, once a sanctuary from evil, now serves as the backdrop for an otherworldly game orchestrated by Ryna for the entertainment of the elite.
    </p>
    <h4>
     The Illusionary Games
    </h4>
    <p class="subsection">
-    Reno's vision has reshaped the once-hidden refuge into a magical battleground where contestants from across the region are abducted and thrust into a perilous contest for survival. The Caldera, with its ever-shifting seasons, enchanted jungle, and hidden dangers, becomes the stage for a game of life and death.
+    Ryna's vision has reshaped the once-hidden refuge into a magical battleground where contestants from across the region are abducted and thrust into a perilous contest for survival. The Caldera, with its ever-shifting seasons, enchanted jungle, and hidden dangers, becomes the stage for a game of life and death.
    </p>
    <h4>
     Contestants and Abductions
    </h4>
    <p class="subsection">
-    Individuals from all walks of life find themselves abducted by Reno's magical prowess and transported to the illusionary arena. From skilled warriors to cunning mages, each contestant must navigate the Caldera's challenges and face the mystical creatures that call it home. The unpredictability of the seasons and the illusionary cover add an extra layer of complexity to the deadly game.
+    Individuals from all walks of life find themselves abducted by Ryna's magical prowess and transported to the illusionary arena. From skilled warriors to cunning mages, each contestant must navigate the Caldera's challenges and face the mystical creatures that call it home. The unpredictability of the seasons and the illusionary cover add an extra layer of complexity to the deadly game.
    </p>
    <h4>
     The Gemstone Key
@@ -82,16 +82,16 @@
     At the heart of the Caldera lies a gemstone structure—a key to freedom for those daring enough to reach it. The contestants must strive to reach this central point before succumbing to the perils of the arena. Legends speak of the gemstone's ability to transport the victor back to their place of origin, marking the end of their harrowing journey.
    </p>
    <h4>
-    Reno's Extravagant Audience
+    Ryna's Extravagant Audience
    </h4>
    <p class="subsection">
-    The cruel spectacle doesn't unfold in secrecy. Instead, Reno transforms the arena into a grand spectacle for the enjoyment of extremely rich and powerful elites. Using magical sentry orbs, these spectators witness the battles unfold, placing bets on contestants and relishing the thrill of danger from a safe distance.
+    The cruel spectacle doesn't unfold in secrecy. Instead, Ryna transforms the arena into a grand spectacle for the enjoyment of extremely rich and powerful elites. Using magical sentry orbs, these spectators witness the battles unfold, placing bets on contestants and relishing the thrill of danger from a safe distance.
    </p>
    <h4>
     Fortunes and Power
    </h4>
    <p class="subsection">
-    Reno, the mastermind behind this arcane arena, not only entertains the elite but amasses great wealth and influence from the bloodsport. The proceeds from the event, fueled by the exuberant wagers of the spectators, further enhance Reno's magical prowess and secure his place among the most formidable wizards of the age.
+    Ryna, the mastermind behind this arcane arena, not only entertains the elite but amasses great wealth and influence from the bloodsport. The proceeds from the event, fueled by the exuberant wagers of the spectators, further enhance Ryna's magical prowess and secure his place among the most formidable wizards of the age.
    </p>
    <h4>
     The Illusionary Legacy
@@ -100,6 +100,28 @@
     As contestants strive for survival within the
     <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera</a>, the illusionary arena leaves a dark imprint on the world. The tales of the Relicoligist's deadly games echo through the ages, a haunting legacy that intertwines with the ancient lore of the Caldera itself. The sanctuary-turned-arena stands as a testament to the ever-shifting nature of power, entertainment, and the perilous dance between them.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    How The Quest Begins
+   </h3>
+   <p class="first-paragraph">
+    This quest can begin in a number of ways. The simplest being that the players are kidnapped in their sleep by Ryna The Relicoligist and unknowingly wake up within the Arena. Another option could be a slight twist on this where someone hires Ryna to 'kidnap' the players in an attempt to torture or test them.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    How the Quest Ends
+   </h3>
+   <p class="first-paragraph">
+    In the center of the
+    <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
+     Zaubergrube Caldera
+    </a>
+    is a large gemstone. Upon touching this Gemstone, the players will be transported to where they were before they were transported to the Caldera. There are a few ways to get to the center if the players are creative, but the simplest is to find an Obelisk of Teleportation. Throughout the Caldera are Obelisks. If the campaign is running over time, any of these could be made the correct obelisk to lead to escape. If there is plenty of time for running the campaign, only a specific obelisk or set of obelisks could be made the correct ones and it would be up to the players to figure this out and the DM to decide how to handle this.
    </p>
   </div>
   <hr/>
@@ -194,10 +216,16 @@
       as cover to ambush their prey.
      </li>
      <li>
-      The Crododiles: TODO
+      The Crocodiles: The crocodiles represent lurking sea creatures that live in the Caldera. The most dangerous is the
+      <a href="../../creatures/monsters/Whiskered_crocfish.html">
+       Whiskered crocfish</a>, which poses a dangerous threat to the players if they try to gather reeds and travel through the water areas.
      </li>
      <li>
-      The Poison Clouds: The poison clouds represent a dense area of forest that's crawling with poisonous insects. The most prominant insect is the purple leopard dart frog. This creature feeds on smaller insects and bugs and is extremely poisonous.
+      The Poison Clouds: The poison clouds represent a dense area of forest that's crawling with poisonous insects. The most prominant insect is the
+      <a href="../../creatures/insects/purple_leopard_dart_frog.html">
+       purple leopard dart frog
+      </a>
+      . This creature feeds on smaller insects and bugs and is extremely poisonous.
      </li>
      <li>
       The Wolves: The wolves represent
@@ -248,10 +276,16 @@
        Moonstone Fruits</a>, which can both provide nourishment and beneficial enhancements to the players.
      </li>
      <li>
-      The Health Icons: These areas represent places where antivenom's can be found. These are used for curing the purple leopard dart frog alements as well as the various reptiles.
+      The Health Icons: These areas represent places where antivenom's can be found. These are used for curing the
+      <a href="../../creatures/insects/purple_leopard_dart_frog.html">
+       purple leopard dart frog
+      </a>
+      alements as well as the various reptiles.
      </li>
      <li>
-      The Yellow Birds: These are Telomney Falcons, an avian species that lives in the high cliffs above the trees. These creatures will not harm the players unless provoked and could potentially provide assistance to them if presented with food.
+      The Yellow Birds: These are
+      <a href="../../creatures/animals/Telomney_Falcons.html">
+       Telomney Falcons</a>, an avian species that lives in the high cliffs above the trees. These creatures will not harm the players unless provoked and could potentially provide assistance to them if presented with food.
      </li>
      <li>
       The medicine Bottles: These bottles represent herbs and other plants that are used as remedies and can heal the party.
