--- a/campaign/creatures/animals/index.html
+++ b/campaign/creatures/animals/index.html
@@ -96,6 +96,11 @@
      </a>
     </li>
     <li>
+     <a href="Telomney_Falcons.html">
+      Telomney Falcons
+     </a>
+    </li>
+    <li>
      <a href="Whisperwing_Owl.html">
       Whisperwing Owl
      </a>
@@ -147,6 +152,27 @@
       <i class="fas fa-camera">
       </i>
       img/Lakurian (3).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Telomney_Falcons (1).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Telomney_Falcons (1).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Telomney_Falcons (2).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Telomney_Falcons (2).jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/Telomney_Falcons (3).jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/Telomney_Falcons (3).jpg
      </a>
     </li>
     <li>
