Updated arena quest page

--- a/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
+++ b/campaign/quests/zaubergrube_arena/Zaubergrube_Arena.html
@@ -160,8 +160,8 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/Umbradraconis_Brastryx_Path.jpg">
-       <img alt="Image" src="img/Umbradraconis_Brastryx_Path.jpg"/>
+      <a href="img/umbradraconis_brastryx_path.jpg">
+       <img alt="Image" src="img/umbradraconis_brastryx_path.jpg"/>
       </a>
      </div>
      <div class="dnd-image-source">
@@ -301,8 +301,8 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/Zaubergrube_Arena_Challenges.jpg">
-       <img alt="Image" src="img/Zaubergrube_Arena_Challenges.jpg"/>
+      <a href="img/zaubergrube_arena_challenges.jpg">
+       <img alt="Image" src="img/zaubergrube_arena_challenges.jpg"/>
       </a>
      </div>
      <div class="dnd-image-source">
@@ -310,6 +310,48 @@
      </div>
      <div class="dnd-image-caption">
       Caption: The various challenges or key features for the players to bout throughout the Zaubergrube Arena.
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    Water Crossing Battlemap
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/water_crossing_battlemap-grid.jpg">
+       <img alt="Image" src="img/water_crossing_battlemap-grid.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: A battlemap that can be used at a water crossing area.
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-image">
+   <h3>
+    Forest Trail Battlemap
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/forest_trail_battlemap-grid.jpg">
+       <img alt="Image" src="img/forest_trail_battlemap-grid.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: A battlemap that can be used at a forest trail area.
      </div>
     </div>
    </p>
