--- a/campaign/quests/zaubergrube_arena/img/index.html
+++ b/campaign/quests/zaubergrube_arena/img/index.html
@@ -51,13 +51,43 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Umbradraconis_Brastryx_Path.jpg">
-      Umbradraconis Brastryx Path.jpg
+     <a href="forest_trail_battlemap-grid.jpg">
+      forest trail battlemap-grid.jpg
      </a>
     </li>
     <li>
-     <a href="Zaubergrube_Arena_Challenges.jpg">
-      Zaubergrube Arena Challenges.jpg
+     <a href="forest_trail_battlemap.jpg">
+      forest trail battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx_path_print.jpg">
+      umbradraconis brastryx path print.jpg
+     </a>
+    </li>
+    <li>
+     <a href="umbradraconis_brastryx_path.jpg">
+      umbradraconis brastryx path.jpg
+     </a>
+    </li>
+    <li>
+     <a href="water_crossing_battlemap-grid.jpg">
+      water crossing battlemap-grid.jpg
+     </a>
+    </li>
+    <li>
+     <a href="water_crossing_battlemap.jpg">
+      water crossing battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a href="zaubergrube_arena_challenges_print.jpg">
+      zaubergrube arena challenges print.jpg
+     </a>
+    </li>
+    <li>
+     <a href="zaubergrube_arena_challenges.jpg">
+      zaubergrube arena challenges.jpg
      </a>
     </li>
    </ul>
