--- a/campaign/quests/zaubergrube_arena/index.html
+++ b/campaign/quests/zaubergrube_arena/index.html
@@ -56,17 +56,59 @@
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Umbradraconis_Brastryx_Path.jpg">
+     <a class="image-index-link" href="img/forest_trail_battlemap-grid.jpg">
       <i class="fas fa-camera">
       </i>
-      img/Umbradraconis_Brastryx_Path.jpg
+      img/forest_trail_battlemap-grid.jpg
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Zaubergrube_Arena_Challenges.jpg">
+     <a class="image-index-link" href="img/forest_trail_battlemap.jpg">
       <i class="fas fa-camera">
       </i>
-      img/Zaubergrube_Arena_Challenges.jpg
+      img/forest_trail_battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/umbradraconis_brastryx_path.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/umbradraconis_brastryx_path.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/umbradraconis_brastryx_path_print.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/umbradraconis_brastryx_path_print.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/water_crossing_battlemap-grid.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/water_crossing_battlemap-grid.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/water_crossing_battlemap.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/water_crossing_battlemap.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/zaubergrube_arena_challenges.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/zaubergrube_arena_challenges.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/zaubergrube_arena_challenges_print.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/zaubergrube_arena_challenges_print.jpg
      </a>
     </li>
    </ul>
