Updated caldera to have image

--- a/campaign/locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html
+++ b/campaign/locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html
@@ -61,6 +61,27 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-image">
+   <h3>
+    Zaubergrube Caldera
+   </h3>
+   <p>
+    <div class="dnd-image-info">
+     <div class="dnd-image-list">
+      <a href="img/zaubergrube_caldera.jpg">
+       <img alt="Image" src="img/zaubergrube_caldera.jpg"/>
+      </a>
+     </div>
+     <div class="dnd-image-source">
+      Source: Created by Antonius Torode
+     </div>
+     <div class="dnd-image-caption">
+      Caption: The Zaubergrube Caldera.
+     </div>
+    </div>
+   </p>
+  </div>
+  <hr/>
   <div class="dnd-info">
    <h3>
     The Zaubergrube Jungle
