--- a/campaign/locations/landmarks/Zaubergrube_Caldera/img/index.html
+++ b/campaign/locations/landmarks/Zaubergrube_Caldera/img/index.html
@@ -51,8 +51,8 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Zaubergrube_Caldera.jpg">
-      Zaubergrube Caldera.jpg
+     <a href="zaubergrube_caldera.jpg">
+      zaubergrube caldera.jpg
      </a>
     </li>
    </ul>
