--- a/campaign/locations/landmarks/Zaubergrube_Caldera/index.html
+++ b/campaign/locations/landmarks/Zaubergrube_Caldera/index.html
@@ -56,10 +56,10 @@
      </a>
     </li>
     <li>
-     <a class="image-index-link" href="img/Zaubergrube_Caldera.jpg">
+     <a class="image-index-link" href="img/zaubergrube_caldera.jpg">
       <i class="fas fa-camera">
       </i>
-      img/Zaubergrube_Caldera.jpg
+      img/zaubergrube_caldera.jpg
      </a>
     </li>
    </ul>
