--- a/campaign/creatures/monsters/Umbradraconis_Brastryx.html
+++ b/campaign/creatures/monsters/Umbradraconis_Brastryx.html
@@ -46,61 +46,477 @@
     Forward
    </a>
   </div>
-  <div class="dnd-header">
-   <h1>
-    Umbradraconis Brastryx
-   </h1>
-  </div>
-  <hr/>
-  <div class="dnd-image">
-   <h3>
-    Umbradraconis Brastryx
-   </h3>
-   <p>
-    <div class="dnd-image-info">
-     <div class="dnd-image-list">
-      <a href="img/umbradraconis_brastryx (1).jpg">
-       <img alt="Image" src="img/umbradraconis_brastryx (1).jpg"/>
+  <!-- Top section for character information -->
+  <div class="container">
+   <div>
+    <div class="character-info">
+     <h2>
+      <a href="umbradraconis_brastryx.html">
+       umbradraconis brastryx
       </a>
-      <a href="img/umbradraconis_brastryx (2).jpg">
-       <img alt="Image" src="img/umbradraconis_brastryx (2).jpg"/>
-      </a>
-      <a href="img/umbradraconis_brastryx (3).jpg">
-       <img alt="Image" src="img/umbradraconis_brastryx (3).jpg"/>
-      </a>
-     </div>
-     <div class="dnd-image-source">
-      Source: Created by Bing AI image generator
-     </div>
-     <div class="dnd-image-caption">
-      Caption: Some variations on the Umbradraconis Brastryx.
-     </div>
+     </h2>
+     <p>
+      <i>
+       gargantuan dragon/dinosaur, chaotic neutral
+      </i>
+     </p>
+     <p>
+      Level: 25
+     </p>
+     <p>
+      Race: unknown
+     </p>
+     <p>
+      Class: ancient beast
+     </p>
+     <p>
+      Background: ancient creature
+     </p>
     </div>
-   </p>
+    <hr/>
+    <!-- Section for Misc Stats -->
+    <div class="dnd-list">
+     <h3>
+      Miscillaneous Stats
+     </h3>
+     <ul>
+      <li>
+       <strong>
+        Armor Class:
+       </strong>
+       18
+      </li>
+      <li>
+       <strong>
+        Hit Points:
+       </strong>
+       300
+      </li>
+      <li>
+       <strong>
+        Speed:
+       </strong>
+       40 ft.
+      </li>
+      <li>
+       <strong>
+        Resistances:
+       </strong>
+       fire, lightning, poison
+      </li>
+      <li>
+       <strong>
+        Immunities:
+       </strong>
+       none
+      </li>
+      <li>
+       <strong>
+        Senses:
+       </strong>
+       darkvision 120 ft., blindsight 60 ft., Passive Perception: 15
+      </li>
+      <li>
+       <strong>
+        Languages:
+       </strong>
+       draconic
+      </li>
+     </ul>
+    </div>
+   </div>
+   <div class="character-info">
+    <a href="img/umbradraconis_brastryx (1).jpg">
+     <img alt="umbradraconis_brastryx (1)-image" class="character-img" src="img/umbradraconis_brastryx (1).jpg"/>
+    </a>
+   </div>
   </div>
   <hr/>
+  <!-- Section for attributes -->
+  <div class="dnd-table">
+   <h3>
+    Attributes
+   </h3>
+   <table>
+    <tr>
+     <th class="title">
+      Ability
+     </th>
+     <th class="title">
+      Score
+     </th>
+     <th class="title">
+      Proficient
+     </th>
+     <th class="title">
+      Modifier
+     </th>
+    </tr>
+    <tr>
+     <td>
+      Strength
+     </td>
+     <td>
+      26
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +8
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Dexterity
+     </td>
+     <td>
+      14
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +2
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Constitution
+     </td>
+     <td>
+      24
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +7
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Intelligence
+     </td>
+     <td>
+      4
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      -3
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Wisdom
+     </td>
+     <td>
+      20
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +5
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Charisma
+     </td>
+     <td>
+      22
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +6
+     </td>
+    </tr>
+   </table>
+  </div>
+  <hr/>
+  <!-- Section for skills and spells -->
+  <div class="dnd-table">
+   <h3>
+    Skills
+   </h3>
+   <table>
+    <thead>
+     <tr>
+      <th class="title">
+       Skill
+      </th>
+      <th class="title">
+       Proficient
+      </th>
+      <th class="title">
+       Modifier
+      </th>
+     </tr>
+    </thead>
+    <tbody>
+     <tr>
+      <td>
+       Acrobatics (Dex)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +2
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Animal Handling (Wis)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +5
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Arcana (Int)
+      </td>
+      <td class="proficient">
+       <i class="fas fa-check">
+       </i>
+      </td>
+      <td class="ability-modifier">
+       +3
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Athletics (Str)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +8
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Deception (Cha)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +6
+      </td>
+     </tr>
+     <tr>
+      <td>
+       History (Int)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       -3
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Insight (Wis)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +5
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Intimidation (Cha)
+      </td>
+      <td class="proficient">
+       <i class="fas fa-check">
+       </i>
+      </td>
+      <td class="ability-modifier">
+       +12
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Investigation (Int)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       -3
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Medicine (Wis)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +5
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Nature (Int)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       -3
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Perception (Wis)
+      </td>
+      <td class="proficient">
+       <i class="fas fa-check">
+       </i>
+      </td>
+      <td class="ability-modifier">
+       +11
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Performance (Cha)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +6
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Persuasion (Cha)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +6
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Religion (Int)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       -3
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Sleight of Hand (Dex)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +2
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Stealth (Dex)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +2
+      </td>
+     </tr>
+     <tr>
+      <td>
+       Survival (Wis)
+      </td>
+      <td class="proficient">
+       -
+      </td>
+      <td class="ability-modifier">
+       +5
+      </td>
+     </tr>
+    </tbody>
+   </table>
+  </div>
+  <hr/>
+  <!-- Section for abilities -->
+  <div class="dnd-list">
+   <h3>
+    Abilities, Spells, and Actions
+   </h3>
+   <ul>
+    <li>
+     <strong>
+      multiattack, terrifying presence, breath weapon (reality distortion):
+     </strong>
+     [multiattack, terrifying presence, breath weapon (reality distortion) description]
+    </li>
+   </ul>
+  </div>
+  <hr/>
+  <!-- Section for equipment -->
+  <div class="dnd-list">
+   <h3>
+    Equipment
+   </h3>
+   <ul>
+    <li>
+     <strong>
+      none:
+     </strong>
+     [none description]
+    </li>
+   </ul>
+  </div>
+  <hr/>
+  <!-- Section for background information and notes -->
   <div class="dnd-info">
    <h3>
-    The Forgotten Titan: Umbradraconis Brastryx
+    Background Information
    </h3>
    <p class="first-paragraph">
     Deep within the heart of the
     <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera
     </a>
-    's jungle, an ancient and formidable creature, who's name (Umbradraconis Brastryx) has long since been forgotten, reigns as the unchallenged alpha. A monstrous fusion of a T-Rex, chicken, and dragon, this colossal beast has become a living legend, its true name long lost to the ages.
-   </p>
-   <p>
-    With scales as dark as the midnight sky and a fiery glint in its eyes, Umbradraconis Brastryx stands as a towering sentinel over the enchanted jungle. The claws that adorn its body bear an uncanny resemblance to those of a giant, otherworldly chicken, adding an eerie juxtaposition to its fearsome appearance. The mere echo of the Umbradraconis Brastryx's resonant roars sends shivers down the spines of all creatures within the Caldera. The deep, ominous reverberations weave through the magical vegetation, creating an otherworldly symphony that announces the presence of this ancient titan.
-   </p>
-   <p>
-    Legends speak of the creature's mysterious origins, suggesting a fusion of magical energies that gave rise to this unique and terrifying being. The creature's breath carries an arcane aura, capable of distorting reality itself, making it a force to be reckoned with.
-   </p>
-   <p>
-    Adventurers who dare to enter the Caldera's depths must navigate the perilous jungle, always mindful of the looming presence of Rexavian Wyrmclaw. The creature's lair, hidden within the illusionary depths, is said to guard ancient secrets and treasures that only the bravest and most skilled can uncover.
-   </p>
-   <p>
-    The Forgotten Titan remains a symbol of both awe and fear, its enigmatic nature and powerful presence adding an extra layer of mystery to the already magical realm of
+    's jungle, an ancient and formidable creature, whose name (
+    <a href="umbradraconis_brastryx.html">
+     umbradraconis brastryx
+    </a>
+    ) has long since been forgotten, reigns as the unchallenged alpha. A monstrous fusion of a T-Rex, chicken, and dragon, this colossal beast has become a living legend, its true name long lost to the ages. With scales as dark as the midnight sky and a fiery glint in its eyes,
+    <a href="umbradraconis_brastryx.html">
+     umbradraconis brastryx
+    </a>
+    stands as a towering sentinel in the enchanted jungle. The claws that adorn its body bear an uncanny resemblance to those of a giant, otherworldly chicken, adding an eerie juxtaposition to its fearsome appearance. The mere echo of the
+    <a href="umbradraconis_brastryx.html">
+     umbradraconis brastryx
+    </a>
+    's resonant roars sends shivers down the spines of all creatures within the Caldera. The deep, ominous reverberations weave through the magical vegetation, creating an otherworldly symphony that announces the presence of this ancient titan. Legends speak of the creature's mysterious origins, suggesting a fusion of magical energies that gave rise to this unique and terrifying being. The creature's breath carries an arcane aura, capable of distorting reality itself, making it a force to be reckoned with. The Forgotten Titan remains a symbol of both awe and fear, its enigmatic nature and powerful presence adding an extra layer of mystery to the already magical realm of
     <a href="../../locations/landmarks/Zaubergrube_Caldera/Zaubergrube_Caldera.html">
      Zaubergrube Caldera
     </a>
@@ -108,25 +524,99 @@
    </p>
   </div>
   <hr/>
-  <div class="dnd-music">
+  <div class="dnd-info">
    <h3>
-    Ominous Sounds
+    Notes
    </h3>
-   <p>
-    <ul>
-     <li>
-      <a href="https://www.youtube.com/watch?v=2eqJYtFO3SI
-">
-       Real T-rex sounds (credit to StudioMod)
-      </a>
-      <a href="../../../music/Real_Trex_sounds_(credit_to_StudioMod).mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-    </ul>
+   <p class="first-paragraph">
+    [notes]
    </p>
   </div>
-  <hr/>
  </body>
 </html>
+<hr/>
+<div class="dnd-image">
+ <h3>
+  Umbradraconis Brastryx
+ </h3>
+ <p>
+  <div class="dnd-image-info">
+   <div class="dnd-image-list">
+    <a href="img/umbradraconis_brastryx (1).jpg">
+     <img alt="Image" src="img/umbradraconis_brastryx (1).jpg"/>
+    </a>
+    <a href="img/umbradraconis_brastryx (2).jpg">
+     <img alt="Image" src="img/umbradraconis_brastryx (2).jpg"/>
+    </a>
+    <a href="img/umbradraconis_brastryx (3).jpg">
+     <img alt="Image" src="img/umbradraconis_brastryx (3).jpg"/>
+    </a>
+   </div>
+   <div class="dnd-image-source">
+    Source: Created by Bing AI image generator
+   </div>
+   <div class="dnd-image-caption">
+    Caption: Some variations on the Umbradraconis Brastryx.
+   </div>
+  </div>
+ </p>
+</div>
+<hr/>
+<div class="dnd-info">
+ <h3>
+  The Forgotten Titan: Umbradraconis Brastryx
+ </h3>
+ <p class="first-paragraph">
+  Deep within the heart of the Zaubergrube Caldera's jungle, an ancient and formidable creature, who's name (Umbradraconis Brastryx) has long since been forgotten, reigns as the unchallenged alpha. A monstrous fusion of a T-Rex, chicken, and dragon, this colossal beast has become a living legend, its true name long lost to the ages.
+ </p>
+ <p>
+  With scales as dark as the midnight sky and a fiery glint in its eyes, Umbradraconis Brastryx stands as a towering sentinel over the enchanted jungle. The claws that adorn its body bear an uncanny resemblance to those of a giant, otherworldly chicken, adding an eerie juxtaposition to its fearsome appearance. The mere echo of the Umbradraconis Brastryx's resonant roars sends shivers down the spines of all creatures within the Caldera. The deep, ominous reverberations weave through the magical vegetation, creating an otherworldly symphony that announces the presence of this ancient titan.
+ </p>
+ <p>
+  Legends speak of the creature's mysterious origins, suggesting a fusion of magical energies that gave rise to this unique and terrifying being. The creature's breath carries an arcane aura, capable of distorting reality itself, making it a force to be reckoned with.
+ </p>
+ <p>
+  Adventurers who dare to enter the Caldera's depths must navigate the perilous jungle, always mindful of the looming presence of Rexavian Wyrmclaw. The creature's lair, hidden within the illusionary depths, is said to guard ancient secrets and treasures that only the bravest and most skilled can uncover.
+ </p>
+ <p>
+  The Forgotten Titan remains a symbol of both awe and fear, its enigmatic nature and powerful presence adding an extra layer of mystery to the already magical realm of Zaubergrube Caldera.
+ </p>
+</div>
+<hr/>
+<div class="dnd-music">
+ <h3>
+  Ominous Sounds
+ </h3>
+ <p>
+  <ul>
+   <li>
+    <a href="https://www.youtube.com/watch?v=2eqJYtFO3SI">
+     Real T-rex sounds (credit to StudioMod)
+    </a>
+    <a href="../../../music/Real_Trex_sounds_(credit_to_StudioMod).mp3">
+     <i class="fas fa-folder">
+     </i>
+    </a>
+   </li>
+   <li>
+    <a href="https://www.youtube.com/watch?v=r6HZu2RlAqg">
+     Real T-Rex Sounds
+    </a>
+    <a href="../../../music/Real_TRex_Sounds.mp3">
+     <i class="fas fa-folder">
+     </i>
+    </a>
+   </li>
+   <li>
+    <a href="https://www.youtube.com/watch?v=MRqIP0L8f6s
+">
+     When You Hear The Most Realistic T.Rex Sounds...
+    </a>
+    <a href="../../../music/When_You_Hear_The_Most_Realistic_T.Rex_Sounds....mp3">
+     <i class="fas fa-folder">
+     </i>
+    </a>
+   </li>
+  </ul>
+ </p>
+</div>
