Added a couple link corrections

--- a/campaign/characters/non-player/milton_manastorm.html
+++ b/campaign/characters/non-player/milton_manastorm.html
@@ -124,8 +124,8 @@
     </div>
    </div>
    <div class="character-info">
-    <a href="img/milton_manastorm.jpg">
-     <img alt="milton_manastorm-image" class="character-img" src="img/milton_manastorm.jpg"/>
+    <a href="img/milton_manastorm.png">
+     <img alt="milton_manastorm-image" class="character-img" src="img/milton_manastorm.png"/>
     </a>
    </div>
   </div>
