--- a/campaign/locations/regions/Matella/Zenitha/Zenitha.html
+++ b/campaign/locations/regions/Matella/Zenitha/Zenitha.html
@@ -68,8 +68,8 @@
    <p>
     <div class="dnd-image-info">
      <div class="dnd-image-list">
-      <a href="img/Zenitha.jpg">
-       <img alt="Image" src="img/Zenitha.jpg"/>
+      <a href="img/Zenitha.png">
+       <img alt="Image" src="img/Zenitha.png"/>
       </a>
      </div>
      <div class="dnd-image-source">
