--- a/campaign/locations/towns/Yellowseed/Yellowseed_Village.html
+++ b/campaign/locations/towns/Yellowseed/Yellowseed_Village.html
@@ -1,191 +1,21 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8"/>
-  <title>
-   Yellowseed Village
-  </title>
-  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
-  <!-- JavaScript to handle navigation buttons -->
-  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
-  </script>
-  <script>
-   function goBack() {
-        window.history.back();
-      }
-
-      function goForward() {
-        window.history.forward();
-      }
-
-      function goToIndex() {
-        window.location.href = "./index.html";
-      }
-  </script>
- </head>
- <body>
-  <div class="navigation">
-   <a href="#" onclick="history.back(); return false;">
-    <i class="fas fa-arrow-left">
-    </i>
-    Back
-   </a>
-   <a href="./index.html">
-    <i class="fas fa-home">
-    </i>
-    Home
-   </a>
-   <a href="../index.html">
-    <i class="fas fa-level-up-alt">
-    </i>
-    Up
-   </a>
-   <a href="#" onclick="history.forward(); return false;">
-    <i class="fas fa-arrow-right">
-    </i>
-    Forward
-   </a>
-  </div>
-  <div class="dnd-header">
-   <h1>
-    Yellowseed Village
-   </h1>
-  </div>
-  <hr/>
-  <div class="dnd-image">
-   <h3>
-    <a href="../../cities/Vifavea/Vifavea.html">
-     Vifavea
-    </a>
-   </h3>
-   <p>
-    <div class="dnd-image-info">
-     <div class="dnd-image-list">
-      <a href="img/yellowseed_village.jpg">
-       <img alt="Image" src="img/yellowseed_village.jpg"/>
-      </a>
-     </div>
-     <div class="dnd-image-source">
-      Source: Created by Antonius Torode
-     </div>
-     <div class="dnd-image-caption">
-      Caption: Yellowseed.
-     </div>
-    </div>
-   </p>
-  </div>
-  <hr/>
-  <div class="dnd-info">
-   <h3>
-    Summary
-   </h3>
-   <p class="first-paragraph">
-    A small town within
-    <a href="../../regions/Matella/The_Ashenlands/The_Ashenlands.html">
-     The Ashenlands</a>, tightly-knit with a population of 1008 residents. The community members share a close bond, familiar with one another due to the town's intimate size. To the north lies expansive farmland, sprawling across the Forestes area. Several townsfolk have made these farms their homes, making occasional trips to the town for leisure or essential provisions. Strategically situated on the shores of the Tyrex Bay Bay, the town serves as a bustling hub for traders. Its prime location attracts a constant influx of merchants and traders, contributing to its vibrant and dynamic atmosphere. Amid this backdrop, a few notable villagers stand out, each with their own unique stories and roles within the community.
-   </p>
-  </div>
-  <hr/>
-  <div class="dnd-music">
-   <h3>
-    Music And Ambiance
-   </h3>
-   <p>
-    <ul>
-     <li>
-      <a href="https://www.youtube.com/watch?v=EcJFmUaXT3g">
-       Azure Span - Music &amp; Snow Ambience | World of Warcraft Dragonflight (Winter Veil Edition)
-      </a>
-      <a href="../../../../music/Azure_Span__Music_&amp;_Snow_Ambience__World_of_Warcraft_Dragonflight_(Winter_Veil_Edition).mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=68-rToI63FM">
-       The Lord of the Rings: Eastfarthing Woods Ambience &amp; Music
-      </a>
-      <a href="../../../../music/The_Lord_of_the_Rings_Eastfarthing_Woods_Ambience_&amp;_Music.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=NeOg8iCFfTA">
-       D&amp;D Ambience - Town Square Daytime
-      </a>
-      <a href="../../../../music/D&amp;D_Ambience__Town_Square_Daytime.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=tzAuoHaERXY">
-       Skyrim - Riverwood Ambiance (music, blacksmith, wind, river, live wallpaper)
-      </a>
-      <a href="../../../../music/Skyrim__Riverwood_Ambiance_(music,_blacksmith,_wind,_river,_live_wallpaper).mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=QOeUVjmfwFw&amp;list=RDvFLTtaDgw-I">
-       Vanilla Zul'Gurub - Music &amp; Ambience (1 hour, 4K, World of Warcraft Classic)
-      </a>
-      <a href="../../../../music/Vanilla_Zul'Gurub__Music_&amp;_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=hBkcwy-iWt8">
-       Skyrim - Music &amp; Ambience - Day
-      </a>
-      <a href="../../../../music/Skyrim__Music_&amp;_Ambience__Day.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=EU8Zn5rHIDI">
-       PIRATE VILLAGE AMBIENCE - Pirate Music, Tavern music, Ocean
-      </a>
-      <a href="../../../../music/PIRATE_VILLAGE_AMBIENCE__Pirate_Music,_Tavern_music,_Ocean.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=xFjpTF4-PgI">
-       Oblivion - Music &amp; Ambience - Towns
-      </a>
-      <a href="../../../../music/Oblivion__Music_&amp;_Ambience__Towns.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=K3hjVijzrtM">
-       Boralus - Music &amp; Ambience - World of Warcraft
-      </a>
-      <a href="../../../../music/Boralus__Music_&amp;_Ambience__World_of_Warcraft.mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-     <li>
-      <a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ
-">
-       Vanilla Stranglethorn Vale - Music &amp; Ambience (3 hours, World of Warcraft Classic)
-      </a>
-      <a href="../../../../music/Vanilla_Stranglethorn_Vale__Music_&amp;_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3">
-       <i class="fas fa-folder">
-       </i>
-      </a>
-     </li>
-    </ul>
-   </p>
-  </div>
-  <hr/>
- </body>
+<head>
+<title></title>
+</head>
+<body>
+<div class="dnd-header"><h1>Yellowseed Village</h1></div><hr><div class="dnd-image"><h3>Vifavea</h3><p><div class="dnd-image-info"><div class="dnd-image-list"><a href="img/yellowseed_village (1).jpg"><img src="img/yellowseed_village (1).jpg" alt="Image"></a><a href="img/yellowseed_village (2).jpg"><img src="img/yellowseed_village (2).jpg" alt="Image"></a></div><div class="dnd-image-source">Source: Created by Antonius Torode</div><div class="dnd-image-caption">Caption: Yellowseed.</div></div></p></div><hr><div class="dnd-info"><h3>Summary</h3><p class="first-paragraph">A small town within The Ashenlands, tightly-knit with a population of 1008 residents. The community members share a close bond, familiar with one another due to the town's intimate size. To the north lies expansive farmland, sprawling across the Forestes area. Several townsfolk have made these farms their homes, making occasional trips to the town for leisure or essential provisions. Strategically situated on the shores of the Tyrex Bay Bay, the town serves as a bustling hub for traders. Its prime location attracts a constant influx of merchants and traders, contributing to its vibrant and dynamic atmosphere. Amid this backdrop, a few notable villagers stand out, each with their own unique stories and roles within the community.
+</p></div><hr><div class="dnd-music"><h3>Music And Ambiance</h3><p><ul>
+<li><a href="https://www.youtube.com/watch?v=EcJFmUaXT3g">Azure Span - Music & Snow Ambience | World of Warcraft Dragonflight (Winter Veil Edition)</a><a href="../../../../music/Azure_Span__Music_&_Snow_Ambience__World_of_Warcraft_Dragonflight_(Winter_Veil_Edition).mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=68-rToI63FM">The Lord of the Rings: Eastfarthing Woods Ambience & Music</a><a href="../../../../music/The_Lord_of_the_Rings_Eastfarthing_Woods_Ambience_&_Music.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=NeOg8iCFfTA">D&D Ambience - Town Square Daytime</a><a href="../../../../music/D&D_Ambience__Town_Square_Daytime.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=tzAuoHaERXY">Skyrim - Riverwood Ambiance (music, blacksmith, wind, river, live wallpaper)</a><a href="../../../../music/Skyrim__Riverwood_Ambiance_(music,_blacksmith,_wind,_river,_live_wallpaper).mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=QOeUVjmfwFw&list=RDvFLTtaDgw-I">Vanilla Zul'Gurub - Music & Ambience (1 hour, 4K, World of Warcraft Classic)</a><a href="../../../../music/Vanilla_Zul'Gurub__Music_&_Ambience_(1_hour,_4K,_World_of_Warcraft_Classic).mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=hBkcwy-iWt8">Skyrim - Music & Ambience - Day</a><a href="../../../../music/Skyrim__Music_&_Ambience__Day.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=EU8Zn5rHIDI">PIRATE VILLAGE AMBIENCE - Pirate Music, Tavern music, Ocean</a><a href="../../../../music/PIRATE_VILLAGE_AMBIENCE__Pirate_Music,_Tavern_music,_Ocean.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=xFjpTF4-PgI">Oblivion - Music & Ambience - Towns</a><a href="../../../../music/Oblivion__Music_&_Ambience__Towns.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=K3hjVijzrtM">Boralus - Music & Ambience - World of Warcraft</a><a href="../../../../music/Boralus__Music_&_Ambience__World_of_Warcraft.mp3"><i class="fas fa-folder"></i></a></li>
+<li><a href="https://www.youtube.com/watch?v=9fWeZxI2SDQ
+">Vanilla Stranglethorn Vale - Music & Ambience (3 hours, World of Warcraft Classic)</a><a href="../../../../music/Vanilla_Stranglethorn_Vale__Music_&_Ambience_(3_hours,_World_of_Warcraft_Classic).mp3"><i class="fas fa-folder"></i></a></li>
+</ul></p></div></body>
 </html>
