Adding some broken link fixing to mmorpdnd.py

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -521,6 +521,11 @@
      </a>
     </li>
     <li>
+     <a href="milton_manastorm.png">
+      milton manastorm.png
+     </a>
+    </li>
+    <li>
      <a href="miranda_mossfoot.jpg">
       miranda mossfoot.jpg
      </a>
