--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -1445,6 +1445,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/milton_manastorm.png">
+      <i class="fas fa-camera">
+      </i>
+      img/milton_manastorm.png
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/miranda_mossfoot.jpg">
       <i class="fas fa-camera">
       </i>
