--- a/campaign/locations/cities/Suren/img/index.html
+++ b/campaign/locations/cities/Suren/img/index.html
@@ -55,6 +55,11 @@
       Suren.jpg
      </a>
     </li>
+    <li>
+     <a href="saltahati_hill.jpg">
+      saltahati hill.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
