--- a/campaign/locations/cities/Suren/index.html
+++ b/campaign/locations/cities/Suren/index.html
@@ -81,6 +81,13 @@
       img/Suren.jpg
      </a>
     </li>
+    <li>
+     <a class="image-index-link" href="img/saltahati_hill.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/saltahati_hill.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
