--- a/campaign/lore/guilds/The_Council_of_Shadows.html
+++ b/campaign/lore/guilds/The_Council_of_Shadows.html
@@ -71,8 +71,8 @@
    </p>
    <p>
     While the
-    <a href="Mistwardens.html">
-     Mistwardens
+    <a href="Mistwarden.html">
+     Mistwarden
     </a>
     seek to preserve the balance between the mortal realm and the mist, the Council of Shadows thrives in chaos and manipulation. They exploit the mist's ability to distort perception, using it as a weapon to sow discord and confusion among their adversaries. Through their mastery of illusion and deception, they orchestrate elaborate schemes, their every move shrouded in a fog of mystery and intrigue.
    </p>
@@ -87,8 +87,8 @@
     The Council of Shadows represents a shadowy underbelly of
     <a href="../../locations/regions/Matella/Matella.html">
      Matella</a>, lurking in the mist's depths, waiting to strike when the time is right. Their presence is both a menace and a reminder of the dangers that lie within the mist's embrace. While the
-    <a href="Mistwardens.html">
-     Mistwardens
+    <a href="Mistwarden.html">
+     Mistwarden
     </a>
     offer a glimmer of hope and guidance, the Council of Shadows embodies the darker side of the mist's allure, manipulating its arcane energies to serve their own ambitions.
    </p>
