--- a/campaign/lore/guilds/The_Mistshadows.html
+++ b/campaign/lore/guilds/The_Mistshadows.html
@@ -65,8 +65,8 @@
      Matella</a>, obscured within the ethereal embrace of The
     <a href="../../spells/Chimeric_Ether.html">
      Chimeric Ether</a>, a clandestine cult known as the Mistshadows weaves its intricate web. This enigmatic group operates in the shadows, their presence hidden from all but the most discerning eyes. Comprising the
-    <a href="Mistwardens.html">
-     Mistwardens
+    <a href="Mistwarden.html">
+     Mistwarden
     </a>
     and
     <a href="The_Council_of_Shadows.html">
@@ -85,8 +85,8 @@
    </p>
    <p>
     The
-    <a href="Mistwardens.html">
-     Mistwardens</a>, masquerading as guardians of The
+    <a href="Mistwarden.html">
+     Mistwarden</a>, masquerading as guardians of The
     <a href="../../spells/Chimeric_Ether.html">
      Chimeric Ether</a>, project an image of benevolence and protection throughout
     <a href="../../locations/regions/Matella/Matella.html">
@@ -114,8 +114,8 @@
     blankets the entirety of
     <a href="../../locations/regions/Matella/Matella.html">
      Matella</a>, the Mistshadows tighten their grip, extending their unseen influence across the land. Whispers of their existence echo through the cities and villages, a testament to their insidious presence. Those who stumble upon their secrets tread a perilous path, caught between the
-    <a href="Mistwardens.html">
-     Mistwardens
+    <a href="Mistwarden.html">
+     Mistwarden
     </a>
     ' illusion of benevolence and
     <a href="The_Council_of_Shadows.html">
